// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar Ability to add a new "reminder" for a user entered day and time. Also, include a city. 1`] = `
<div class="container mx-auto">
  <div class="header flex items-center p-4"><button id="btn-today" class="py-2.5 px-5 mr-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
      Today
    </button> <button id="btn-previous" class="rounded-full h-10 w-10 hover:bg-gray-200 mr-1"><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-left" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" class="svg-inline--fa fa-chevron-left">
        <path fill="currentColor" d="M224 480c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25l192-192c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25L77.25 256l169.4 169.4c12.5 12.5 12.5 32.75 0 45.25C240.4 476.9 232.2 480 224 480z" class=""></path>
      </svg></button> <button id="btn-next" class="rounded-full h-10 w-10 hover:bg-gray-200 mr-2 md:mr-8"><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-right" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" class="svg-inline--fa fa-chevron-right">
        <path fill="currentColor" d="M96 480c-8.188 0-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L242.8 256L73.38 86.63c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l192 192c12.5 12.5 12.5 32.75 0 45.25l-192 192C112.4 476.9 104.2 480 96 480z" class=""></path>
      </svg></button>
    <div class="text-3xl md:text-3xl hidden md:flex long-title">
      maio de 2022
    </div>
    <div class="md:text-3xl md:hidden short-title">
      mai. de 2022
    </div> <button id="btn-add-reminder" class="hidden md:flex mx-auto text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
      Add New Reminder
    </button> <button type="button" class="mx-auto mr-0 md:hidden text-white border bg-blue-700 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center"><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="plus" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="svg-inline--fa fa-plus">
        <path fill="currentColor" d="M432 256c0 17.69-14.33 32.01-32 32.01H256v144c0 17.69-14.33 31.99-32 31.99s-32-14.3-32-31.99v-144H48c-17.67 0-32-14.32-32-32.01s14.33-31.99 32-31.99H192v-144c0-17.69 14.33-32.01 32-32.01s32 14.32 32 32.01v144h144C417.7 224 432 238.3 432 256z" class=""></path>
      </svg></button>
  </div>
  <div class="grid grid-cols-7 border border-gray-300 h-screen-adjust">
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell bg-blue-50 hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          1
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          2
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          3
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          4
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          5
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          6
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell bg-blue-50 hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          7
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell bg-blue-50 hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          8
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          9
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          10
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          11
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          12
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          13
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell bg-blue-50 hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          14
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell bg-blue-50 hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          15
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          16
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          17
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          18
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          19
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          20
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell bg-blue-50 hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          21
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell bg-blue-50 hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          22
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          23
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          24
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          25
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          26
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          27
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell bg-blue-50 hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          28
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell bg-blue-50 hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          29
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          30
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell hover:border-blue-700">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day">
          31
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day text-gray-300">
          1
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day text-gray-300">
          2
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day text-gray-300">
          3
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div class="flex flex-col box-border border border-gray-300 md:p-4 p-1 day-cell bg-blue-50">
      <div class="relative w-full justify-items-center">
        <div class="relative h-8 text-lg text-black font-medium label-day text-gray-300">
          4
        </div>
        <div class="w-full flex flex-col">
          <div>
            <div class="w-full flex flex-col"></div>
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
  <!---->
</div>
`;

exports[`Calendar Navigate by months 1`] = `
<div class="container mx-auto">
  <div class="header flex items-center p-4"><button id="btn-today" class="py-2.5 px-5 mr-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
      Today
    </button> <button id="btn-previous" class="rounded-full h-10 w-10 hover:bg-gray-200 mr-1"><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-left" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" class="svg-inline--fa fa-chevron-left">
        <path fill="currentColor" d="M224 480c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25l192-192c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25L77.25 256l169.4 169.4c12.5 12.5 12.5 32.75 0 45.25C240.4 476.9 232.2 480 224 480z" class=""></path>
      </svg></button> <button id="btn-next" class="rounded-full h-10 w-10 hover:bg-gray-200 mr-2 md:mr-8"><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-right" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" class="svg-inline--fa fa-chevron-right">
        <path fill="currentColor" d="M96 480c-8.188 0-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L242.8 256L73.38 86.63c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l192 192c12.5 12.5 12.5 32.75 0 45.25l-192 192C112.4 476.9 104.2 480 96 480z" class=""></path>
      </svg></button>
    <div class="text-3xl md:text-3xl hidden md:flex long-title">
      abril de 2022
    </div>
    <div class="md:text-3xl md:hidden short-title">
      abr. de 2022
    </div> <button id="btn-add-reminder" class="hidden md:flex mx-auto text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
      Add New Reminder
    </button> <button type="button" class="mx-auto mr-0 md:hidden text-white border bg-blue-700 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center"><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="plus" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="svg-inline--fa fa-plus">
        <path fill="currentColor" d="M432 256c0 17.69-14.33 32.01-32 32.01H256v144c0 17.69-14.33 31.99-32 31.99s-32-14.3-32-31.99v-144H48c-17.67 0-32-14.32-32-32.01s14.33-31.99 32-31.99H192v-144c0-17.69 14.33-32.01 32-32.01s32 14.32 32 32.01v144h144C417.7 224 432 238.3 432 256z" class=""></path>
      </svg></button>
  </div>
  <div class="grid grid-cols-7 border border-gray-300 h-screen-adjust"></div>
  <!---->
</div>
`;
